--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,15 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Associate Programmer Platformer.sln"
+    "dotnet.defaultSolution": "Associate_Programmer_Platformer.sln",
+    "omnisharp.useModernNet": false,
+    "omnisharp.path": "latest",
+    "omnisharp.enableRoslynAnalyzers": true,
+    "omnisharp.enableEditorConfigSupport": true,
+    "csharp.inlayHints.enableAll": true,
+    "csharp.semanticHighlighting.enabled": true,
+    "[csharp]": {
+        "editor.defaultFormatter": "ms-dotnettools.csharp"
+    },
+    "dotnet.completion.showCompletionItemsFromUnimportedNamespaces": true
 }
